tests/dockerfile/graph_builder/checks/resources/RunYumNoGpgCheck/fail/Dockerfile.wilderness
FROM openjdk:ship

RUN tdnf -y update && \
    tdnf -y upgrade && \
    tdnf install -y ${package} shadow-utils --nogpgcheck && \
    tdnf clean all
